@@ -1,14 +1,13 @@
 package com.assessment.repository;
 
-import com.assessment.dataReader.CSVReader;
+import com.assessment.reader.CSVReader;
 import com.assessment.exceptions.CSVReaderException;
 import com.assessment.model.Cuisine;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class CuisineRepository extends CSVReader {
-    private List<Cuisine> cuisines;
+    private final List<Cuisine> cuisines;
 
     public CuisineRepository() throws CSVReaderException {
         cuisines = readCuisinesFromFile();
@@ -18,7 +17,7 @@ public class CuisineRepository extends CSVReader {
         List<List<String>> allLines = loadSourceFromPath("csv/cuisines.csv");
         List<List<String>> lines = getLines(allLines);
 
-        return lines.stream().map(line -> Cuisine.fromLine(line)).collect(Collectors.toList());
+        return lines.stream().map(Cuisine::fromLine).toList();
     }
 
     public List<Cuisine> getCuisinesByStartingName(String name) {
