@@ -1,14 +1,13 @@
 package com.assessment.repository;
 
-import com.assessment.dataReader.CSVReader;
+import com.assessment.reader.CSVReader;
 import com.assessment.exceptions.CSVReaderException;
 import com.assessment.model.Restaurant;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class RestaurantRepository extends CSVReader {
-    private List<Restaurant> restaurants;
+    private final List<Restaurant> restaurants;
 
     public RestaurantRepository() throws CSVReaderException {
         restaurants = readRestaurantsFromFile();
@@ -18,7 +17,7 @@ public class RestaurantRepository extends CSVReader {
         List<List<String>> allLines = loadSourceFromPath("csv/restaurants.csv");
         List<List<String>> lines = getLines(allLines);
 
-        return lines.stream().map(line -> Restaurant.fromLine(line)).collect(Collectors.toList());
+        return lines.stream().map(Restaurant::fromLine).toList();
     }
 
     public List<Restaurant> getRestaurants() {
